--- a/djangoerp/themes/default/templates/base_wizard_form.html
+++ b/djangoerp/themes/default/templates/base_wizard_form.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block formcontent %}
+{% block formbody %}
 {{ wizard.management_form }}
 {% if wizard.form.forms %}
 {{ wizard.form.management_form }}
