--- a/djangoerp/themes/default/templates/pluggets/plugget_wizard_form.html
+++ b/djangoerp/themes/default/templates/pluggets/plugget_wizard_form.html
@@ -27,8 +27,9 @@
 {% if wizard.steps.step0 == 0 %}{% trans "choose type" %}{% else %}{% trans "configure settings" %}{% endif %}
 {% endblock %}
 
-{% block formcontent_suffix %}
-    {% if plugget_description %}
-    <tr><th>{% trans "Description" %}:</th><td>{{ plugget_description }}</td></tr>
-    {% endif %}
+{% block formbody %}
+{{ block.super }}
+{% if plugget_description %}
+<tr><th>{% trans "Description" %}:</th><td>{{ plugget_description }}</td></tr>
+{% endif %}
 {% endblock %}
