--- a/djangoerp/themes/default/templates/elements/submit_button.html
+++ b/djangoerp/themes/default/templates/elements/submit_button.html
@@ -1,3 +1,3 @@
 {% load i18n %}
 
-<span class="submit"><input title="{% trans 'Confirm' %}" type="submit" value="{% trans 'Confirm' %}" /></span>
+<span class="submit"><button title="{% trans 'Confirm' %}" name="{{ submitbutton_value|default:'submit' }}">{% trans 'Confirm' %}</button></span>
