--- a/djangoerp/themes/default/templates/base_model_list_confirm_delete.html
+++ b/djangoerp/themes/default/templates/base_model_list_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base_confirm_delete.html" %}
 
 {% load i18n %}
-{% load strfuncs %}
+{% load basefuncs %}
 {% load modelfuncs %}
 
 {% block meta_title %}
