Added missing title attrs in default template for wizards.

--- a/djangoerp/themes/default/templates/base_wizard_form.html
+++ b/djangoerp/themes/default/templates/base_wizard_form.html
@@ -17,10 +17,10 @@
 {% block formbuttons %}
 {% include "elements/cancel_button.html" %}
 {% if wizard.steps.prev %}
-<span class="cancel"><button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% trans "Prev step" %}</button></span>
+<span class="cancel"><button title="{% trans 'Previous step' %}" name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% trans "Prev step" %}</button></span>
 {% endif %}
 {% if wizard.steps.next %}
-<span class="submit"><input title="{% trans 'Next' %}" type="submit" value="{% trans 'Next' %}" /></span>
+<span class="submit"><input title="{% trans 'Next step' %}" type="submit" value="{% trans 'Next' %}" /></span>
 {% else %}
 {% include "elements/submit_button.html" %}
 {% endif %}
