--- a/djangoerp/themes/default/templates/base.html
+++ b/djangoerp/themes/default/templates/base.html
@@ -29,6 +29,7 @@
             <div id="user-nav">
                 <div id="userarea">
                     {% block userarea %}
+                    {% include "auth/userarea.html" %}
                     {% endblock %}
                 </div>
                 <nav id="bookmarks">
