Added missing template for userarea and small tweak of CSS.

--- a/djangoerp/themes/default/static/css/screen.css
+++ b/djangoerp/themes/default/static/css/screen.css
@@ -558,6 +558,7 @@ td .yes, td .no {
 
 #bookmarks .actions {
     width: auto;
+    margin-right: 10px;
 }
 
 #bookmarks .actions a, #bookmarks .actions a:link, #bookmarks .actions a:visited { background-position: -32px center; }
